# espresso

./: .dockerignore  .eslintrc.js  .gitignore  .hadolint.yaml  .travis.yml  Dockerfile  README.md  azure-pipelines.yml  checkupdate.sh  deploy.yml  docker-bake.hcl  docker-compose.yml  dockerbuild.sh  greenkeeper.json  npmupdate.sh  package-lock.json  package.json  steuerung.cpp
.github/: dependabot.yml
api/: Cargo.toml  Dockerfile
deploy/: .artifactignore  .gitignore  Dockerfile  apply.sh  backend.tf  bashfunctions.sh  build.yml  cloud-config.txt  deploy.sh  destroy.sh  espresso.tf  iac.sh  index.ts  installterraform.sh  iotdeviceconnection.sh  main.tf  output.ps1  output.tf  plan.sh  prod.tfvars  temp  terraform.yml  test.tfvars  testvm.tf  variables.tf  versions.tf  writeoutputtodevops.sh
e2e/: cypress.config.js  cypress.json  package-lock.json  package.json
e2etest/: .artifactignore  .babelrc.js  .eslintrc.js  build.yml  package-lock.json  package.json  tsconfig.json  tslint.json
func/: .eslintignore  .gitignore  build.yml  jest.config.js  package.json  (+5 more)
node/: .artifactignore  .babelrc.js  .dockerignore  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  Dockerfile_amd64  Dockerfile_qemu  build.yml  checkupdate.sh  docker-bake.hcl  docker-compose.yml  dockerbuild.sh  enablecrosscompile.sh  enableexperimental.sh  jest.config.js  package-lock.json  package.json  pideploy.sh  startbuildkitd.sh  tsconfig.json  tslint.json
node/__mocks__/: applicationinsights.ts
node/__tests__/: index.test.ts
node/src/: gpio_pin.rs  index.test.ts  index.ts  main.rs  main.ts
(+41 files in other folders)
