[package]
name = "steckdose"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.5"
funksteckdose = { git = "https://github.com/StefanSchoof/funksteckdose", branch = "addError" }
rocket = "0.5.0-rc.1"